(master) modeles modifications + footer changes

--- a/accompagnement.html
+++ b/accompagnement.html
@@ -194,15 +194,18 @@
                     <div class="header1">
                         <div>
                             <h3>Quelque soit votre projet, votre objectif,
-                                 Body Academy Paris vous accompagne dans sa réalisation</h3>
+                                Body Academy Paris vous accompagne dans sa réalisation</h3>
                         </div>
                     </div>
 
                     <div>
                         <p><b>
-                                Vous voulez acquérir de nouvelles compétences, ouvrir un salon de coiffure ou un barber shop,
-                                étoffer votre équipe ? Vous avez besoin d'une formation adaptée à votre culture d'entreprise et à votre
-                                environnement de travail ? Notre équipe répond à toutes vos problématiques et vous propose des
+                                Vous voulez acquérir de nouvelles compétences, ouvrir un salon de coiffure ou un barber
+                                shop,
+                                étoffer votre équipe ? Vous avez besoin d'une formation adaptée à votre culture
+                                d'entreprise et à votre
+                                environnement de travail ? Notre équipe répond à toutes vos problématiques et vous
+                                propose des
                                 formations sur-mesure.
                             </b>
                         </p>
@@ -211,32 +214,45 @@
                     <div class="acctxt">
                         <h4>Formez vos collaborateurs</h4>
                         <p>Vous souhaitez recruter un salarié et le former à vos besoins spécifiques ?</p>
-                        <p>Pour permettre à vos collaborateurs d'acquérir en quelques jours une tehnique particulière ou un savoir-faire
-                            spécifique, découvrir de nouvelles méthodes et s'approprier de nouveaux outils, être plus performant, pensez à nos
+                        <p>Pour permettre à vos collaborateurs d'acquérir en quelques jours une tehnique particulière ou
+                            un savoir-faire
+                            spécifique, découvrir de nouvelles méthodes et s'approprier de nouveaux outils, être plus
+                            performant, pensez à nos
                             formations pris en charge par votre OPCA chaque année.</p>
                         <h4>Recruter</h4>
-                        <p>Body Academy Paris vous propose un accompagnement personnalisé de l'évaluation de vos besoins en recrutement jusqu'à
-                            la qualification de vos futurs salariés. Objectif: sécuriser vos recrutements et éviter le risque d'abandon.</p>
+                        <p>Body Academy Paris vous propose un accompagnement personnalisé de l'évaluation de vos besoins
+                            en recrutement jusqu'à
+                            la qualification de vos futurs salariés. Objectif: sécuriser vos recrutements et éviter le
+                            risque d'abandon.</p>
                         <h4>Concevoir vos projets de formation</h4>
                         <p>Vous avez besoin d'une formation qui s'adapte à votre planning ?</p>
-                        <p>Pour répondre au mieux à vos besoins, nous vous accompagnons dans la conception de votre projet: de l'analyse du
-                            besoin au déploiement de la formation, adaptons, personalisons le contenu des formations en fonction de vos
+                        <p>Pour répondre au mieux à vos besoins, nous vous accompagnons dans la conception de votre
+                            projet: de l'analyse du
+                            besoin au déploiement de la formation, adaptons, personalisons le contenu des formations en
+                            fonction de vos
                             problématiques.</p>
                     </div>
-                    
+
                 </div>
-        
+
             </div>
         </main>
 
-        <footer class="container footer">
-            <div class="coordonnees container">
-                <p class="adresse">Body Academy - 105 boulevard Chanzy - 93100 Montreuil | contact@bodyacademy.fr</p>
-                <p class="underline"></p>
-                <p class="renseignements">Renseignements : 09 50 60 95 08</p>
-                <p class="designers">Design by <a href="https://www.linkedin.com/in/alex-lap-tran-082a8b17b/"
-                        target="_blank">Alex Tran, </a> <a href="https://www.linkedin.com/in/ronan-le-discot-982267120/"
-                        target="_blank">Ronan Le Discot</a></p>
+        <footer class="footer container">
+            <div class="row">
+                <div class="col">
+                    <p class="adresse">Body Academy - 105 boulevard Chanzy - 93100 Montreuil |
+                        contact@bodyacademy.fr
+                    </p>
+                    <p class="underline"></p>
+                    <p class="renseignements">Renseignements : 09 50 60 95 08</p>
+                    <p class="designers">Design by <a href="https://www.linkedin.com/in/alex-lap-tran-082a8b17b/"
+                            target="_blank">Alex
+                            Tran,
+                        </a> <a href="https://www.linkedin.com/in/ronan-le-discot-982267120/" target="_blank">Ronan
+                            Le
+                            Discot</a></p>
+                </div>
             </div>
         </footer>
     </div>
