--- a/salon.html
+++ b/salon.html
@@ -181,7 +181,7 @@
             <div class="container">
                 <div class="subMenu">
                     <a href="label.html">Le Label</a>
-                    <a class="activeSubMenu" href="salon.html">Le Salon</a>
+                    <a class="activeSubMenu" href="salon.html">Le Salon Body Academy Paris</a>
                 </div>
             </div>
         </nav>
