--- a/vae.html
+++ b/vae.html
@@ -194,31 +194,41 @@
                     <div class="header1">
                         <div>
                             <h3>Si vous avez plus d'un an d'expérience dans un secteur donné,
-                                 vous pouvez prétendre à une VAE</h3>
+                                vous pouvez prétendre à une VAE</h3>
                         </div>
                     </div>
 
                     <div>
-                        <p><b>Qu'es-ce que la Validation des Acquis d'Expérience : VAE ?<br> Toute personne, quelque soit son âge, sa nationalité,
-                                son statut et son niveau de formation, qui justifie d'au moins 1 an d'éxpérience en rapport direct avec la
-                                certification visée, peut prétendre à la VAE. Cette certification qui peut être un diplôme, un titre ou un
+                        <p><b>Qu'es-ce que la Validation des Acquis d'Expérience : VAE ?<br> Toute personne, quelque
+                                soit son âge, sa nationalité,
+                                son statut et son niveau de formation, qui justifie d'au moins 1 an d'éxpérience en
+                                rapport direct avec la
+                                certification visée, peut prétendre à la VAE. Cette certification qui peut être un
+                                diplôme, un titre ou un
                                 certificat de qualification professionnelle.</b>
                         </p>
                     </div><br>
-                    
+
                 </div>
-        
+
             </div>
         </main>
 
-        <footer class="container footer">
-            <div class="coordonnees container">
-                <p class="adresse">Body Academy - 105 boulevard Chanzy - 93100 Montreuil | contact@bodyacademy.fr</p>
-                <p class="underline"></p>
-                <p class="renseignements">Renseignements : 09 50 60 95 08</p>
-                <p class="designers">Design by <a href="https://www.linkedin.com/in/alex-lap-tran-082a8b17b/"
-                        target="_blank">Alex Tran, </a> <a href="https://www.linkedin.com/in/ronan-le-discot-982267120/"
-                        target="_blank">Ronan Le Discot</a></p>
+        <footer class="footer container">
+            <div class="row">
+                <div class="col">
+                    <p class="adresse">Body Academy - 105 boulevard Chanzy - 93100 Montreuil |
+                        contact@bodyacademy.fr
+                    </p>
+                    <p class="underline"></p>
+                    <p class="renseignements">Renseignements : 09 50 60 95 08</p>
+                    <p class="designers">Design by <a href="https://www.linkedin.com/in/alex-lap-tran-082a8b17b/"
+                            target="_blank">Alex
+                            Tran,
+                        </a> <a href="https://www.linkedin.com/in/ronan-le-discot-982267120/" target="_blank">Ronan
+                            Le
+                            Discot</a></p>
+                </div>
             </div>
         </footer>
     </div>
