--- a/modeles.html
+++ b/modeles.html
@@ -200,9 +200,9 @@
                     <div class="col-lg-6 blockCenter">
                         <div class="blocks">
                             <a href="#">
+                                <h3>Participation <span>5</span><span class="euros"><b>€</b></span></h3>
                                 <div class="blocks-titles">
                                     <div>
-                                        <p><b>Participation 5€</b></p><br>
                                         <p>Coupe seule (H ou F)<br>Brushing seul</p>
                                     </div>
                                 </div>
@@ -213,9 +213,9 @@
                     <div class="col-lg-6 blockCenter">
                         <div class="blocks">
                             <a href="#">
+                                <h3>Participation <span>10</span><span class="euros"><b>€</b></span></h3>
                                 <div class="blocks-titles">
                                     <div>
-                                        <p><b>Participation 10€</b></p><br>
                                         <p>Coupe<br>Shampooing<br>Coiffage</p>
                                     </div>
                                 </div>
@@ -226,9 +226,9 @@
                     <div class="col-lg-6 blockCenter">
                         <div class="blocks">
                             <a href="#">
+                                <h3>Participation <span>20</span><span class="euros"><b>€</b></span></h3>
                                 <div class="blocks-titles">
                                     <div>
-                                        <p><b>Participation 20€</b></p><br>
                                         <p>Coloration<br>Soin<br>Coiffage</p>
                                     </div>
                                 </div>
@@ -239,9 +239,9 @@
                     <div class="col-lg-6 blockCenter">
                         <div class="blocks">
                             <a href="#">
+                                <h3>Coiffage <span>10~35</span><span class="euros"><b>€</b></span></h3>
                                 <div class="blocks-titles">
                                     <div>
-                                        <p><b>Coiffage 10€ à 35€</b></p><br>
                                         <p>Coiffure<br>Brushing<br>Nattes, tresses, vanilles</p>
                                     </div>
                                 </div>
