--- a/contactThankYou.html
+++ b/contactThankYou.html
@@ -18,6 +18,9 @@
     <!-- My Styles -->
     <link rel="stylesheet" href="./css/styles.css">
 
+    <!-- Google reCAPTCHA v2 -->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
     <title>Body Academy</title>
 </head>
 
@@ -48,7 +51,7 @@
                 <div class="openSubPanel"><a href="#">Professionnels &nbsp;<i class="fas fa-caret-right"></i></a></div>
                 <ul class="subPanel">
                     <li class="heading closeSubPanel"><i class="fas fa-caret-left"></i>&nbsp; Professionnels</li>
-                    <li><a href="formationsPro.html">Formations</a></li>
+                    <li><a href="formationPro.html">Formations</a></li>
                     <li><a href="accompagnement.html">Accompagnement</a></li>
                     <li><a href="vae.html">V.A.E</a></li>
                 </ul>
@@ -146,10 +149,10 @@
                     <a href="index.html">Accueil</a>
                     <a href="formationEleves.html">Élèves</a>
                     <a href="formationsPro.html">Professionnels</a>
-                    <a class="activeMenu" href="modeles.html">Modèles</a>
+                    <a href="modeles.html">Modèles</a>
                     <a href="label.html">Label</a>
                     <a href="blog.html">Blog</a>
-                    <a href="contact.html">Contact</a>
+                    <a class="activeMenu" href="contact.html">Contact</a>
                 </div>
             </div>
         </nav>
@@ -180,79 +183,29 @@
         <!-- <nav class="container desktopSubMenu">
             <div class="container">
                 <div class="subMenu">
-                    <a class="activeSubMenu" href="formationSPro.html">Formations</a>
-                    <a href="accompagnement.html">Accompagnement</a>
-                    <a href="vae.html">V.A.E</a>
+                    <a href="index.html">École</a>
+                    <a class="activeSubMenu" href="origine.html">Origine</a>
                 </div>
             </div>
         </nav> -->
 
         <main>
             <div class="container">
-                <div class="row modeles">
 
-                    <div class="header1">
-                        <div>
-                            <h3>L'école Body Academy Paris accueille et coiffe les modèles peu importe le cheveu</h3>
-                        </div>
+                <br>
+                <div class="row">
+                    <div class="col">
+                        <h4 class="text-center">Votre message a été envoyé. Nous reviendrons vers vous prochainement !
+                        </h4>
+                        <div class="thankYou"><img src="" alt=""></div>
                     </div>
-
-                    <div class="col-lg-6 blockCenter">
-                        <div class="blocks">
-                            <a href="#">
-                                <h3>Participation <span>5</span><span class="euros"><b>€</b></span></h3>
-                                <div class="blocks-titles">
-                                    <div>
-                                        <p>Coupe seule (H ou F)<br>Brushing seul</p>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 blockCenter">
-                        <div class="blocks">
-                            <a href="#">
-                                <h3>Participation <span>10</span><span class="euros"><b>€</b></span></h3>
-                                <div class="blocks-titles">
-                                    <div>
-                                        <p>Coupe<br>Shampooing<br>Coiffage</p>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 blockCenter">
-                        <div class="blocks">
-                            <a href="#">
-                                <h3>Participation <span>20</span><span class="euros"><b>€</b></span></h3>
-                                <div class="blocks-titles">
-                                    <div>
-                                        <p>Coloration<br>Soin<br>Coiffage</p>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 blockCenter">
-                        <div class="blocks">
-                            <a href="#">
-                                <h3>Coiffage <span>10-35</span><span class="euros"><b>€</b></span></h3>
-                                <div class="blocks-titles">
-                                    <div>
-                                        <p>Coiffure<br>Brushing<br>Nattes, tresses, vanilles</p>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-
                 </div>
-            </div>
-        </main>
+                <br>
 
+            </div>
+
+
+        </main>
         <footer class="footer container">
             <div class="row">
                 <div class="col">
