--- a/contact.html
+++ b/contact.html
@@ -226,26 +226,34 @@
                     </div>
                     <div class="col-md-6">
                         <h4 class="">Envoyez-nous un message</h4>
-                        <form id="contactForm" method="POST">
+                        <form id="contactForm" method="POST" action="./php/formProcess.php">
+                            <div class="formMessages"></div>
                             <div class="form-group">
                                 <label for="name"><b>Nom</b></label>
                                 <input type="text" id="name" name="name" class="form-control"
                                     placeholder="nom et prénom">
-                                <p class="text-danger name-danger d-none">Entrez un nom et prénom</p>
+                                <p class="help-block with-errors"></p>
                             </div>
                             <div class="form-group">
                                 <label for="email"><b>Courriel</b></label>
                                 <input type="email" id="email" name="email" class="form-control"
                                     placeholder="votre courriel">
-                                <p class="text-danger email-danger d-none">Entrez un courriel</p>
+                                <p class="help-block with-errors"></p>
                             </div>
                             <div class="form-group">
                                 <label for="message"><b>Message</b></label>
                                 <textarea type="text" id="message" name="message" class="form-control" rows="6"
                                     placeholder="votre message..."></textarea>
-                                <p class="text-danger message-danger d-none">Écrivez un message</p>
+                                <p class="help-block with-errors"></p>
                             </div>
-                            <div class="g-recaptcha" data-sitekey="6LdbkqAUAAAAAOG5RavGm0pnJHlztNTINIA8krx2"></div>
+                            <div class="form-group">
+                                <div class="g-recaptcha" data-sitekey="6LdbkqAUAAAAAOG5RavGm0pnJHlztNTINIA8krx2"
+                                    data-callback="verifyRecaptchaCallback"
+                                    data-expired-callback="expiredRecaptchaCallback"></div>
+                                <input class="form-control d-none" data-recaptcha="true"
+                                    data-error="Veuillez compléter le Captcha">
+                                <p class="help-block with-errors"></p>
+                            </div>
                             <div class="form-group">
                                 <input type="submit" class="btn btnEnvoyer" id="submit" name="submit" value="Envoyer">
                             </div>
@@ -283,6 +291,8 @@
     <script src="./js/slick/slick.min.js"></script>
     <!-- Bootstrap -->
     <script src="./js/bootstrap/bootstrap.js"></script>
+    <!-- Form Validation -->
+    <script src="./js/validator.js"></script>
     <!-- My Script -->
     <script src="./js/script.js"></script>
 </body>
