Email form sending is working

--- a/contact.html
+++ b/contact.html
@@ -226,7 +226,8 @@
                     </div>
                     <div class="col-md-6">
                         <h4 class="">Envoyez-nous un message</h4>
-                        <form id="contactForm" method="POST" action="./php/formProcess.php">
+                        <form id="contactForm" method="POST" action="./php/formProcess.php" role="form"
+                            data-toggle="validator">
                             <div class="formMessages"></div>
                             <div class="form-group">
                                 <label for="name"><b>Nom</b></label>
