(master) added favicons, few modifications for responsiveness

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <!-- Favicons -->
+    <link rel="shortcut icon" href="./assets/favicons/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./assets/favicons/favicon.png" type="image/png">
+    <link rel="icon" sizes="32x32" href="./assets/favicons/favicon-32.png" type="image/png">
+    <link rel="icon" sizes="64x64" href="./assets/favicons/favicon-96.png" type="image/png">
+    <link rel="icon" sizes="196x196" href="./assets/favicons/favicon-196.png" type="image/png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./assets/favicons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicons/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicons/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./assets/favicons/apple-touch-icon-144x144.png">
+
     <!-- Google Fonts -->
     <link
         href="https://fonts.googleapis.com/css?family=Fahkwang:400,500,600,700|Poppins:400,400i,500,500i,600,600i,700,700i|Raleway:400,400i,500,500i,600,600i,700,700i"
@@ -43,15 +54,15 @@
                 <ul class="subPanel">
                     <li class="heading closeSubPanel"><i class="fas fa-caret-left"></i>&nbsp; Élève</li>
                     <li><a href="formationEleves.html">Formations</a></li>
-                    <li><a href="financements.html">Financements</a></li>
-                    <li><a href="stages.html">Stages</a></li>
+                    <li><a href="financementsEleves.html">Financements</a></li>
+                    <li><a href="stagesEleves.html">Stages</a></li>
                 </ul>
             </li>
             <li>
                 <div class="openSubPanel"><a href="#">Professionnels &nbsp;<i class="fas fa-caret-right"></i></a></div>
                 <ul class="subPanel">
                     <li class="heading closeSubPanel"><i class="fas fa-caret-left"></i>&nbsp; Professionnels</li>
-                    <li><a href="formationPro.html">Formations</a></li>
+                    <li><a href="formationsPro.html">Formations</a></li>
                     <li><a href="accompagnement.html">Accompagnement</a></li>
                     <li><a href="vae.html">V.A.E</a></li>
                 </ul>
@@ -65,7 +76,6 @@
                     <li><a href="salon.html">Le Salon Body Academy Paris</a></li>
                 </ul>
             </li>
-            <li><a href="blog.html">Blog</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li class="closePanel"><img src="./assets/icons/close-button-$primary.svg" alt="close menu icon"></li>
         </ul>
@@ -93,7 +103,7 @@
     <div class="bodyWrapper">
         <!-- Page Contents Go Here -->
         <header>
-            <div class="container mobileBanner">
+            <div class="mobileBanner">
                 <button class="hamburger hamburger--squeeze" type="button">
                     <span class="hamburger-box">
                         <span class="hamburger-inner"></span>
@@ -151,7 +161,6 @@
                     <a href="formationsPro.html">Professionnels</a>
                     <a href="modeles.html">Modèles</a>
                     <a href="label.html">Label</a>
-                    <a href="blog.html">Blog</a>
                     <a class="activeMenu" href="contact.html">Contact</a>
                 </div>
             </div>
@@ -206,10 +215,10 @@
                         <p><b>93100 Montreuil</b></p>
                         <p><i class="fas fa-phone"></i> <b> : 09 50 60 95 08</b></p>
                         <p><i class="fas fa-at"></i> <b> : contact@bodyacademy.fr</b></p>
-                        <p class="ratp"><img src="../assets/icons/metro_icon.svg" alt="Métro"> <b>Robespierre</b>
+                        <p class="ratp"><img src="./assets/icons/metro_icon.svg" alt="Métro"> <b>Robespierre</b>
                             (ligne 9)
                         </p>
-                        <p class="ratp"><img src="../assets/icons/bus_icon.svg" alt="Bus"> <b>Sorins</b>
+                        <p class="ratp"><img src="./assets/icons/bus_icon.svg" alt="Bus"> <b>Sorins</b>
                             (ligne 102)
                         </p>
                         <div id="map"></div>
