--- a/stagesEleves.html
+++ b/stagesEleves.html
@@ -154,9 +154,9 @@
             <div class="container">
                 <div class="mainMenu">
                     <a href="index.html">Accueil</a>
-                    <a href="formationEleves.html">Élèves</a>
+                    <a class="activeMenu" href="formationEleves.html">Élèves</a>
                     <a href="formationsPro.html">Professionnels</a>
-                    <a class="activeMenu" href="modeles.html">Modèles</a>
+                    <a href="modeles.html">Modèles</a>
                     <a href="label.html">Label</a>
                     <a href="contact.html">Contact</a>
                 </div>
@@ -186,71 +186,25 @@
         </div>
 
         <!-- Desktop Sub Menu Nav -->
-        <!-- <nav class="container desktopSubMenu">
+        <nav class="container desktopSubMenu">
             <div class="container">
                 <div class="subMenu">
-                    <a class="activeSubMenu" href="formationSPro.html">Formations</a>
-                    <a href="accompagnement.html">Accompagnement</a>
-                    <a href="vae.html">V.A.E</a>
+                    <a href="formationEleves.html">Formations</a>
+                    <a href="financementsEleves.html">Financements</a>
+                    <a class="activeSubMenu" href="stagesEleves.html">Stages</a>
                 </div>
             </div>
-        </nav> -->
+        </nav>
 
         <main>
             <div class="container">
-                <div class="row modeles">
 
-                    <div class="header1">
-                        <div>
-                            <h3>L'école Body Academy Paris accueille et coiffe les modèles peu importe le cheveu</h3>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 blockCenter">
-                        <div class="blocks">
-                            <h3>Participation <span>5</span><span class="euros"><b>€</b></span></h3>
-                            <div class="blocks-titles">
-                                <div>
-                                    <p>Coupe seule (H ou F)<br>Brushing seul</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 blockCenter">
-                        <div class="blocks">
-                            <h3>Participation <span>10</span><span class="euros"><b>€</b></span></h3>
-                            <div class="blocks-titles">
-                                <div>
-                                    <p>Coupe<br>Shampooing<br>Coiffage</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 blockCenter">
-                        <div class="blocks">
-                            <h3>Participation <span>20</span><span class="euros"><b>€</b></span></h3>
-                            <div class="blocks-titles">
-                                <div>
-                                    <p>Coloration<br>Soin<br>Coiffage</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 blockCenter">
-                        <div class="blocks">
-                            <h3>Coiffage <span>10-35</span><span class="euros"><b>€</b></span></h3>
-                            <div class="blocks-titles">
-                                <div>
-                                    <p>Coiffure<br>Brushing<br>Nattes, tresses, vanilles</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
+                <br><br><br><br><br><br><br>
+                <div class="row">
+                    <h1>Contenu à fournir</h1>
                 </div>
+                <br><br><br><br><br><br><br>
+
             </div>
         </main>
 
